# AdventOfCode

./: .bettercodehub.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  buildall.sh  sonar-project.properties  vs.bat
10ms/: real.txt
12ms/: main.cpp
1ms/: main.cpp
2015/day1/: main.cpp
2015/day10/: main.cpp
2015/day11/: main.cpp
2015/day12/: main.cpp  test.txt
2015/day13/: main.cpp
2015/day14/: main.cpp
2015/day15/: main.cpp
2015/day16/: main.cpp
2015/day17/: main.cpp
2015/day18/: main.cpp
2015/day19/: main.cpp  main_part1.cpp  test.txt
2015/day2/: main.cpp
2015/day20/: main.cpp
2015/day21/: main.cpp
2015/day22/: Cargo.toml  day22.py
2015/day22/src/: day22_15.rs  main.rs
2015/day23/: main.cpp
2015/day24/: main.cpp
2015/day25/: day25.py
2015/day3/: main.cpp
2015/day4/: main.cpp  md5.cpp
2015/day5/: main.cpp  test.txt
2015/day6/: main.cpp  test.txt
2015/day7/: main.cpp
2015/day8/: main.cpp
2015/day9/: main.cpp
2015_rust/: Cargo.toml
2015_rust/images/: runtimes.html
2015_rust/input/: day06_15_test.txt  day12_15_test.txt  day17_15_test.txt
2015_rust/src/: day01_15.rs  day02_15.rs  day03_15.rs  day04_15.rs  day05_15.rs  day06_15.rs  day07_15.rs  day08_15.rs  day09_15.rs  day10_15.rs  day11_15.rs  day12_15.rs  day13_15.rs  day14_15.rs  day15_15.rs  day16_15.rs  day17_15.rs  day18_15.rs  day19_15.rs  day20_15.rs  day21_15.rs  day22_15.rs  day23_15.rs  day24_15.rs  day25_15.rs  main.rs
2016/: Cargo.toml
2016/input/: day03_16_test.txt  day09_16_test.txt  day09_16_test2.txt  day10_16_real.txt  day12_16_real2.txt  day18_16_real.txt  day21_16_test.txt  day22_16_real.txt  day23_16_real.txt  day23_16_real2.txt  day24_16_real.txt
2016/src/: day01_16.rs  day02_16.rs  day03_16.rs  day04_16.rs  day05_16.rs  day06_16.rs  day07_16.rs  day08_16.rs  day09_16.rs  day10_16.rs  day11_16.rs  day12_16.rs  day13_16.rs  day14_16.rs  day15_16.rs  day16_16.rs  day17_16.rs  day18_16.rs  day19_16.rs  day20_16.rs  day21_16.rs  day22_16.rs  day23_16.rs  day24_16.rs  day25_16.rs  main.rs  template.rs  tools.rs
2017/10ms/: main.cpp  main_2.cpp  test.txt
2017/11ms/: main.cpp
2017/13ms/: main.cpp  real.txt
2017/14ms/: main.cpp
2017/15ms/: main.cpp
2017/16ms/: main.cpp
2017/17ms/: main.cpp
2017/18ms/: main.cpp
2017/19ms/: main.cpp  real.txt
2017/20ms/: main.cpp  real.txt
2017/21ms/: main.cpp  rewrite.cpp
2017/22ms/: main.cpp  real.txt
2017/23ms/: main.cpp  part2.cpp
2017/24ms/: main.cpp
2017/25ms/: main.cpp  real.txt
2017/3ms/: main.cpp
2017/4ms/: test.txt
2017/5ms/: main.cpp
2017/7ms/: main.cpp
2017/8ms/: main.cpp
2017/9ms/: main.cpp
2018/day01-18/: input_test.txt  input_test2.txt  main.cpp
2018/day02-18/: main.cpp
2018/day03-18/: input_real.txt  main.cpp
2018/day04-18/: main.cpp
2018/day05-18/: input_real.txt  main.cpp
2018/day06-18/: input_real.txt  main.cpp
2018/day07-18/: main.cpp
2018/day08-18/: input_real.txt  main.cpp
2018/day09-18/: input_real.txt  input_test.txt  main.cpp
2018/day10-18/: main.cpp
2018/day11-18/: main.cpp
2018/day12-18/: main.cpp
2018/day13-18/: input_real.txt  input_test3.txt  main.cpp
2018/day14-18/: main.cpp
2018/day15-18/: input_real.txt  main.cpp  main2.cpp
2018/day16-18/: input_real.txt  main.cpp
2018/day17-18/: input_real.txt  main.cpp
2018/day18-18/: main.cpp
2018/day19-18/: main.cpp
2018/day20-18/: input_real.txt  input_testreddit.txt  main.cpp
2018/day21-18/: input_real.txt  main.cpp
2018/day22-18/: main.cpp
2018/day23-18/: input_real.txt  main.cpp
2018/day24-18/: input_real.txt  main.cpp
2018/day25-18/: input_real.txt  main.cpp
2019/: Cargo.toml  build.sh  makemovie.txt  run.sh
2019/day01-18/: Cargo.toml
2019/day01-19/: Cargo.toml
2019/day02-19/: Cargo.toml
2019/input/: day01_19_real.txt  day06_19_real.txt  day07_19_real.txt  day09_19_real.txt  day12_19_real.txt  day15_19_real.txt  day16_19_real.txt  day17_19_real.txt  day18_19_real2.txt  day19_19_real.txt  day20_19_real.txt  day21_19_droidscript1.txt  day21_19_droidscript2.txt  day21_19_real.txt  day23_19_real.txt  day24_19_real.txt  day25_19_real.txt  day25_19_startscript.txt
2019/src/: day01_18.rs  day01_19.rs  day02_19.rs  day03_19.rs  day03_19_gnuplot.gp  day03a_19.rs  day04_19.rs  day05_19.rs  day06_19.rs  day07_19.rs  day08_19.rs  (+24 more)
2020/: Cargo.toml
2020/analysis/: execution times.xlsx
2020/images/: runtimes.html
2020/input/: day01_20_real.txt  day03_20_real.txt  day06_20_real.txt  day07_20_real.txt  day10_20_real.txt  day12_20_real.txt  day13_20_real.txt  day14_20_real.txt  day16_20_real.txt  day18_20_real.txt  day22_20_real.txt  day23_20_real.txt  day25_20_real.txt
2020/src/: day01_20.rs  day02_20.rs  day03_20.rs  day04_20.rs  day05_20.rs  day06_20.rs  day07_20.rs  day08_20.rs  day09_20.rs  day10_20.rs  day11_20.rs  day12_20.rs  day13_20.rs  day14_20.rs  day15_20.rs  day16_20.rs  day17_20.rs  day18_20.rs  day19_20.rs  day20_20.rs  day21_20.rs  day22_20.rs  day23_20.rs  day23b_20.rs  day24_20.rs  day25_20.rs  linkedlist.rs  main.rs  node.rs  passport.rs  template.rs
2021/: Cargo.toml  makemovie.bat
2022/: Cargo.toml  make_movie.bat
2023/: .gitignore  prepare.py  template.py
2024_rust/: Cargo.toml  make_movie.bat
2024_rust/images/: .gitattributes  runtimes.html
2024_rust/images/final/: .gitattributes
2024_rust/input/: day10-real.txt  day11-real.txt  day14-real.txt  day15-real.txt  day19-real.txt  day24-real.txt  day25-real.txt
2024_rust/src/: day03_24.rs  day04_24.rs  day05_24.rs  day06_24.rs  day07_24.rs  day07_24_orig.rs  day08_24.rs  day09_24.rs  day10_24.rs  day11_24.rs  day12_24.rs  day13_24.rs  day14_24.rs  day15_24.rs  day16_24.rs  day17_24.rs  day18_24.rs  day19_24.rs  day20_24.rs  day21_24.rs  day22_24.rs  day23_24.rs  day24_24.rs  day25_24.rs  main.rs  template.rs  tools.rs
2025/: prepare.py  requirements.txt
2ms/: main.cpp
4ms/: main.cpp
5ms/: main.cpp
6ms/: main.cpp  real.txt
7ms/: main.cpp
9ms/: test.txt
general/: basetimer.cpp  basetimer.h  knot.cpp  knot.h  logger.cpp  logger.h  md5.h
(+214 files in other folders)
