[package]
name = "aoc2015"
version = "0.1.0"
authors = ["Arno Kamphuis <ik@arnokamphuis.nl>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
order-stat = "0.1"
md5 = "0.7.0"
hex = "0.4.0"
permutohedron = "0.2.4"
queues = "1.1.0"
num = "^0.3.1"
png = "0.15.2"
regex = "1"
itertools = "0.10.5"
petgraph = "0.5.1"
modinverse = "^0.1.1"
plotly = "0.8.1"
font8x8 = "0.2.7"
serde_json = "1.0.87"