[package]
name = "aoc2016"
version = "0.1.0"
authors = ["Arno Kamphuis <arno.kamphuis@hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
order-stat = "0.1"
md5 = "0.7.0"
hex = "0.4.0"
petgraph = "0.4.13"
queues = "1.1.0"
itertools = "0.8.2"
priority-queue = "0.6.0"
libmath = "0.2.1"
gcollections = "1.4.0"
intervallum = "1.3.0"
permutohedron = "0.2.4"