[package]
name = "aoc2015"
version = "0.1.0"
authors = ["Arno Kamphuis <arno.kamphuis@hu.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
order-stat = "0.1"
md5 = "0.1"
hex = "0.4.0"
petgraph = "0.4.13"
permutohedron = "0.2.4"
queues = "1.1.0"
num = "0.2.0"
png = "0.15.2"
